<resources>
    <!--<string name="app_name">CoreMVP</string>-->

    <!-- Default -->
    <string name="search">Search</string>
    <string name="log_receive_response" formatted="false">Received response for %s in %.1fms%n%s</string>
    <string name="log_sending_response" formatted="false">Sending request %s on %s%n%s</string>
    <string name="log_encoded_path" formatted="false">Encoded path %s</string>
    <string name="log_data_is_null">Data is null</string>
    <string name="telegram_id">\@chandra_bezzo</string>

    <!-- Login -->
    <string name="nip">NIP</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="nurse_assistant">Nurse Assistant</string>

    <!-- Healing -->
    <string name="healing">Healing</string>
    <string name="jadwal">Jadwal</string>
    <string name="pasien">Pasien</string>
    <string name="nurse">Nurse</string>
    <string name="akun">Akun</string>

    <!-- Akun -->
    <string name="edit">Edit</string>
    <string name="nama_lengkap">Full Name</string>
    <string name="no_telpon">Phone Number</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="favorite">Favorite</string>
    <string name="tambahkan_sebagai_favorite">Tambahkan sebagai favorite?</string>
    <string name="hapus_dari_favorite">Hapus dari favorite?</string>


    <string name="kategori_kampus">Kategori Kampus</string>
    <string name="kategori_negara">Kategori Negara</string>
    <string name="negara">Negara</string>
    <string name="kategori">Kategori</string>
    <string name="searching">Cari Kampus</string>

    <string-array name="list_lantai">
        <item>Lantai 1</item>
        <item>Lantai 2</item>
        <item>Lantai 3</item>
    </string-array>

    <string-array name="list_kamar">
        <item>Kamar 1</item>
        <item>Kamar 2</item>
        <item>Kam3r 2</item>
    </string-array>

    <string-array name="list_kasur">
        <item>Kasur 1</item>
        <item>Kasur 2</item>
        <item>Kasur 3</item>
    </string-array>

    <!-- Patient -->
    <string name="umur_tahun">Tahun</string>
    <string name="tuan">Mr.</string>
    <string name="nona">Mrs.</string>
    <string name="detail_patient">Detail Patient</string>
    <string name="history">History</string>
    <string name="patient_information">Patient Information</string>
    <string name="diseases_history">Diseases History</string>

    <!-- Calendar -->
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <string name="selamat_pagi">Good Morning</string>
    <string name="error_loading_data">Error Loading Data</string>
    <string name="refresh">Refresh</string>
</resources>
