<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/default_toolbar"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:text="@string/search"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:text="@string/filter"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:text="@string/favorite"/>

        </LinearLayout>

    </RelativeLayout>











</LinearLayout>